@@ -484,7 +484,9 @@ public class CommonMsgs extends StdLibrary implements CommonCommands
 		}
 		else
 		{
-			final boolean ignore=((target.playerStats()!=null)&&(target.playerStats().isIgnored(mob)));
+			final boolean ignore=(
+				(target.playerStats()!=null)
+				&&(target.playerStats().isIgnored("TELL",mob)));
 			CMMsg msg=null;
 			if(((!CMLib.flags().isSeeable(mob))||(!CMLib.flags().isSeeable(target))))
 			{
