@@ -1593,16 +1593,20 @@ Please use this command to submit ideas for the MUD.
 
 IGNORE=\
 Command : IGNORE\n\r\
-Usage   : IGNORE (ADD/REMOVE [PLAYER/ACCOUNT NAME])\n\r\
+Usage   : IGNORE (ADD/REMOVE ([CATEGORY].)[PLAYER/ACCOUNT NAME])\n\r\
 Example : ignore\n\r\
 Example : ignore list\n\r\
 Example : ignore add bob\n\r\
+Example : ignore add tell.bob\n\r\
 Example : ignore remove bob\n\r\
 Short(s): \n\r\
 This command allows the player to add or remove names from his or her \
 ignored players list.  The ignored list consists of some number of other players \
-by name.  A player will never receive channel messages from players on this \
-list, nor will they receive any TELL messages from players on this list.
+by name.  A player will never receive channel messages from simple players on this \
+list, nor will they receive any TELL messages from players on this list.  You can \
+also, however, ignore only certain categories of messages from another player.  To do \
+this, you can prefix the players name with a channel name, or one of \
+MAIL, TELL, TEACH, or RIDE, followed by a period, and then the other player name.
 
 INVENTORY=\
 Command : INVENTORY\n\r\
