@@ -1,5 +1,5 @@
 <!--
-TODO: scripting commands to generate gmcp and msdp requests
+TODO: Show all tags so mxp editor can be useful.
 TODO: mapper api
 TODO: (optional) refactor to sep out triggers, alias, etc libs
  -->
